syntax="proto3";

package message.v1;

option go_package="github.com/crazyfrankie/goim/protocol/message/v1;messagev1";

message SendMessageRequest {
  int64 sendID = 1;
  int64 recvID = 2;
  int64 groupID = 3;
  int64 client_msgID = 4;
  int32 session_type = 5;
  int32 message_from = 6;
  int32 contentType = 7;
  int64 send_time = 8;
  bytes content = 9;
}

message SendMessageResponse {
  int64 serverMsgID = 1;
  int64 clientMsgID = 2;
  int64 sendTime = 3;
}

message SetMessageStatusRequest {
  int32 status = 1;
}

message SetMessageStatusResponse {}

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc SetMessageStatus(SetMessageStatusRequest) returns (SetMessageStatusResponse);
}